<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ReceiptApp</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_add_receipt">Add Receipt</string>
    <string name="title_activity_add_category_dialog">Add Category</string>
    <string name="title_activity_about_app">About Application</string>
    <string name="lbl_add_receipt">Add Receipt</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_name">Name:</string>
    <string name="lbl_enter_name">Enter Name</string>
    <string name="lbl_create">Create</string>
    <string name="lbl_store_name">Store Name:</string>
    <string name="lbl_enter_store_name">Enter Store Name</string>
    <string name="lbl_total">Total:</string>
    <string name="lbl_category">Category:</string>
    <string name="lbl_enter_total">Enter Total</string>
    <string name="lbl_taxes">Taxes:</string>
    <string name="lbl_gst">GST:</string>
    <string name="lbl_enter_gst">Enter GST</string>
    <string name="lbl_pst">PST:</string>
    <string name="lbl_enter_pst">Enter PST</string>
    <string name="lbl_add_category">Add category</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_parse_forget_password">Forget Password</string>
    <string name="title_activity_parse_login">Login</string>
    <string name="title_activity_parse_sign_up">Sign Up</string>
	<string name="signIn">Sign In</string>
    <string name="submit">Submit</string>
    <string name="orText">Or</string>
    <string name="createAccount">Create Account</string>
    <string name="emailHint">Email</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="changing_fragments">Changing Fragments</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
