<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".AddReceiptActivity" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="13dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lbl_store_name" />

            <EditText
                android:id="@+id/edtxt_store_name"
                style="?android:attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/lbl_enter_store_name"
                android:padding="@dimen/activity_vertical_margin"
                android:background="@android:color/transparent">

                <requestFocus />
            </EditText>
 
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_border"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="13dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lbl_total" />

            <EditText
                android:id="@+id/edtxt_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" 
                android:hint="@string/lbl_enter_total"
                style="?android:attr/editTextStyle"
                android:padding="@dimen/activity_vertical_margin"
                android:background="@android:color/transparent"/>
 
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_border"
            android:orientation="vertical">
	
    		<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="13dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lbl_category" />        
            
            <Spinner
                android:id="@+id/spn_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin"/>
 
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_border"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/txt_taxes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_taxes"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                
                <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lbl_gst"
	                android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/edtxt_gst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" 
                    android:padding="@dimen/activity_vertical_margin"
                	android:background="@android:color/transparent"
                	android:hint="@string/lbl_enter_gst"/>
                
                <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lbl_pst"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
				
                <EditText
                    android:id="@+id/edtxt_pst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" 
                    android:padding="@dimen/activity_vertical_margin"
                	android:background="@android:color/transparent"
                	android:hint="@string/lbl_enter_pst"/>
            </LinearLayout>
 
        </LinearLayout>
    </LinearLayout>

</ScrollView>
